--- a/src/app/listing/listing.component.scss
+++ b/src/app/listing/listing.component.scss
@@ -1,20 +1,32 @@
-.movie {    
-    margin: 10px;
-    display: inline-block;
-    position: relative;
-    overflow: hidden;
-    width: 200px;
-    height: 400px;
-    border-radius: 10px;
-    border: 2px solid lightseagreen;
-}
+.listing {
+    padding: 10px;
 
-.Poster {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 0;
-    width: 100%;
-    height: auto;
+    &__action {
+        border: 2px solid lightseagreen;
+        padding: 10px;
+        margin: 5px;
+    }
+
+    &__genres {
+        padding: 0;
+        list-style-type: none;
+
+        li {
+            font-size: 18px;
+            padding: 10px;
+            background: lightpink;
+            cursor: pointer;
+
+            &:hover {
+                background: lightskyblue;
+            }
+        }
+    }
+
+    &__selected-genre {
+        font-size: 18px;
+        padding: 10px;
+        background: lightskyblue;
+    }
+
 }
