--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <a [routerLink]="['/']" routerLinkActive="router-link-active" > Home</a> <br />
-<a [routerLink]="['/listing']" routerLinkActive="router-link-active" > Listing </a>
+<a [routerLink]="['/listing']" routerLinkActive="router-link-active" > Listing </a> <br />
+<a [routerLink]="['/form']" routerLinkActive="router-link-active" > Form </a>
 
 <router-outlet></router-outlet>
