--- a/src/app/listing/listing.component.scss
+++ b/src/app/listing/listing.component.scss
@@ -1,6 +1,11 @@
 .listing {
     padding: 10px;
 
+    &__login {
+        padding: 10px;
+        border: 1px solid black;
+    }
+
     &__action {
         border: 2px solid lightseagreen;
         padding: 10px;
